<resources>
    <string name="app_name">LIHC Tool</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="appTitle">LIHC tool</string>
    <string name="text_welcomeTitle">Welcome to the LIHC tool</string>
    <string name="text_welcomeText">The aim of this tool is to provide an indication of whether a household is in fuel poverty using a set of key characteristics. This does not, however, lead to a definitive classification of fuel poverty.</string>
    <string name="button_start">Start</string>
    <string name="button_settings">Settings</string>

    <string name="title_activity_employment_question">employmentQuestion</string>
    <string name="title_activity_partner_employment_question">PartnerEmploymentQuestion</string>

    <!-- Employment questions -->
    <string name="employmentQuestion">What is your employment status?</string>
    <string name="employed">Employed</string>
    <string name="unemployed">Unemployed</string>
    <string name="inactive">Inactive</string>
    <string name="retired">Retired</string>
    <!-- Partner employment question -->
    <string name="partnerEmploymentQuestion">What is your partner\'s employment status?</string>
    <string name="none">Not applicable</string>

    <!-- Means Tested benefits -->
    <string name="meansTestedBenefitsQuestion">Any household member in receipt of any means tested income benefits?</string>
    <string name="title_activity_benefits_question">BenefitsQuestion</string>
    <string name="title_activity_disability_question">DisabilityQuestion</string>

    <!-- Yes No -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Disabilities question -->
    <string name="disabilityQuestion">Any household member in receipt of any disability benefits?</string>
    <string name="title_activity_payment_method_question">PaymentMethodQuestion</string>

    <!-- Payment method -->
    <string name="paymentQuestion">Method of payment for electricity:</string>
    <string name="directDebit">Direct Debit</string>
    <string name="prePayment">Pre Payment</string>
    <string name="standardCredit">Standard Credit</string>
    <string name="title_activity_results">Results</string>

    <!-- Property type -->
    <string name="title_activity_property_type_question">PropertyTypeQuestion</string>
    <string name="propertyTypeQuestion">Type of property:</string>
    <string name="flat">Flat</string>
    <string name="terrace">Terrace</string>
    <string name="semi_detached">Semi-detached</string>
    <string name="detached">Detached</string>
    <string name="bungalow">Bungalow</string>

    <!-- Pre1964 -->
    <string name="title_activity_pre1964_question">Pre1964Question</string>
    <string name="pre1964QuestionText">Was the dwelling built before 1964?</string>

    <!-- Bedrooms -->
    <string name="title_activity_number_of_bedrooms_question">NumberOfBedroomsQuestion</string>
    <string name="bedroomsQuestion">Number of bedrooms:</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>

    <!-- Tenure -->
    <string name="title_activity_tenure_question">TenureQuestion</string>
    <string name="tenureQuestion">Tenure:</string>
    <string name="social">Social</string>
    <string name="owner">Owner occupier</string>
    <string name="prs">Private rented</string>

    <!-- Main fuel -->
    <string name="title_activity_main_fuel_question">MainFuelQuestion</string>
    <string name="fuelQuestion">What is the main fuel type?</string>
    <string name="gas">Gas</string>
    <string name="electricity">Electricity</string>
    <string name="other">Other</string>

    <!-- Hot water -->
    <string name="title_activity_hot_water_question">HotWaterQuestion</string>
    <string name="hotWaterQuestion">Do you heat your water through a central heating system?</string>

    <!-- Results text -->
    <string name="resultsText">Test</string>
    <string name="goHome">Back to start</string>
    <string name="title_activity_settings">Settings</string>


</resources>
