<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="clifford.alan.lihctool.PartnerEmploymentQuestion"
    android:background="@color/blue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="50dp"
        android:background="@color/blue"
        android:text="@string/appTitle"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="50sp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/QuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="15dp"
        android:paddingLeft="40dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/partnerEmploymentQuestion"/>

    <Button
        android:id="@+id/employed"
        android:layout_below="@id/QuestionText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/employed"
        android:textSize="25sp"
        android:onClick="employed"/>

    <Button
        android:id="@+id/unemployed"
        android:layout_below="@id/employed"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/unemployed"
        android:textSize="25sp"
        android:onClick="unemployed"/>

    <Button
        android:id="@+id/inactive"
        android:layout_below="@id/unemployed"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/inactive"
        android:textSize="25sp"
        android:onClick="inactive"/>

    <Button
    android:id="@+id/retired"
    android:layout_below="@id/inactive"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:text="@string/retired"
    android:textSize="25sp"
    android:onClick="retired"/>

    <Button
        android:id="@+id/none"
        android:layout_below="@id/retired"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/none"
        android:textSize="25sp"
        android:onClick="none"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar3"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/none"
        android:layout_alignStart="@+id/none"
        android:layout_alignRight="@+id/none"
        android:layout_alignEnd="@+id/none"
        android:progress="18" />


</RelativeLayout>
