<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="clifford.alan.lihctool.TenureQuestion">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="50dp"
        android:background="@color/blue"
        android:text="@string/appTitle"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="50sp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tenureQuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="15dp"
        android:paddingLeft="40dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="30dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/tenureQuestion"/>

    <Button
        android:id="@+id/one"
        android:layout_below="@id/tenureQuestionText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/social"
        android:textSize="25sp"
        android:onClick="social"/>

    <Button
        android:id="@+id/two"
        android:layout_below="@id/one"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/owner"
        android:textSize="25sp"
        android:onClick="owner"/>

    <Button
        android:id="@+id/three"
        android:layout_below="@id/two"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/prs"
        android:textSize="25sp"
        android:onClick="private_rented"/>

</RelativeLayout>
